# swisskit

./: Cargo.toml  README.md
crates/swisskit/: lib.rs
crates/swisskit-core/: Cargo.toml
crates/swisskit-core/src/: lib.rs  prelude.rs
crates/swisskit-dsa/: Cargo.toml  README.md
